--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3,12 +3,10 @@
 
 @import "defaults";
 
-@media screen {
-	.outer {
-		transform: scale(1);
-		transform-origin: 568px 0;
-	}
-}
+@import "ui";
+@import "minigrid";
+@import "menu";
+@import "canvas";
 
 header {
 	padding-top: 8px;
@@ -18,171 +16,6 @@ main {
 	height: 100%;
 }
 
-main .content {
-	margin: -10px;
-	padding: 10px;
-	transition: background 0.3s linear;
-	height: 100%;
-	height: calc(100% - 14px);
-}
-
-main .content:focus {
-	outline: 0;
-	background: rgba(0,0,0,0.05);
-}
-
-.outer {
-	height: 728px;
-	margin: auto;
-	max-width: 100%;
-	width: 1152px;
-}
-
-.table {
-	display: table;
-	width: 100%;
-	height: 100%;
-}
-
-.table .row {
-	display: table-row;
-}
-
-.table .cell {
-	display: table-cell;
-	font-size: 12px;
-}
-
-.table .cell .cell:hover {
-
-	background: #eee;
-	transition: background 0.3s linear;
-
-	.cell {
-		background: white;
-	}
-
-	.cell:hover {
-		background: #eee;
-	}
-
-}
-
-.table .cell .cell {
-	display: table-cell;
-}
-
-.table .cell .cell .cell {
-	border: 0;
-}
-
-
-.table .table {
-	height: 100%;
-	border: 0;
-}
-
-.table .spacer {
-	padding: 10px;
-	height: 100%;
-	height: calc(100% + 20px);
-}
-
-.row.first {
-	height: 70%;
-}
-
-.row.second {
-	height: 30%;
-}
-
-.row.first .cell {
-	width: 20%;
-}
-
-.row.second .cell {
-	width: 50%;
-}
-
-/* borders */
-.table {
-	border: 2px solid black;
-}
-
-.table .table {
-	border: 0;
-}
-
-.table .row.first > .cell {
-	border-bottom: 2px solid black;
-}
-
-.table > .row > .cell > .table > .row > .cell {
-	border-right: 2px solid black;
-}
-
-.table .table > .row > .cell > .table > .row > .cell {
-	border-right: 0;
-}
-
-.table .table > .row > .cell > .table > .row:first-child > .cell {
-	border-bottom: 2px solid black;
-	height: 50%;
-}
-
-.table > .row > .cell > .table > .row > .cell:last-child {
-	border-right: 0;
-}
-
-.footnote {
-	text-align: right;
-}
-
-.minigrid:after {
-	display: table;
-	content: "";
-	clear: both;
-}
-
-.minigrid .col {
-	float: left;
-}
-
-.minigrid .col.w3 {
-	width: calc(100%/4);
-}
-
-.minigrid .col.w4 {
-	width: calc(100%/3);
-}
-
-.minigrid .col.w6 {
-	width: 50%;
-}
-
-.minigrid .col.w8 {
-	width: calc(100%/1.5);
-}
-
-.info [contenteditable] {
-	display: inline-block;
-	background: #eee;
-	padding: 8px;
-	min-width: 8px;
-	max-height: 2.2em;
-	overflow: hidden;
-	vertical-align: middle;
-	line-height: 1em;
-}
-.info [contenteditable] > * {
-	display: inline;
-}
-
-
-
-@media all and (max-width: 1024px) {
-	.outer {
-		padding: 0 16px;
-		height: 690px;
-	}
+#main {
+	padding: 16px 16px 16px 64px;
 }
