--- a/src/templates/canvas.html
+++ b/src/templates/canvas.html
@@ -1,34 +1,27 @@
+{{#if canvas}}
 <div id="canvas">
 	<header>
 		<div class="minigrid">
 			<div class="col w4">
-			<h1>The Business Model Canvas</h1>
+			<h1>Business Model Canvas</h1>
 			</div>
 			<div class="col w8">
 				<div class="info">
 					<div class="col w3">
 						For:
-						<div contenteditable id="for">
-							{{canvas.for}}
-						</div>
+						<div contenteditable id="for">{{canvas.for}}</div>
 					</div>
 					<div class="col w3">
 						By:
-						<div contenteditable id="by">
-							{{canvas.by}}
-						</div>
+						<div contenteditable id="by">{{canvas.by}}</div>
 					</div>
 					<div class="col w3">
 						Date:
-						<div contenteditable id="date">
-							{{canvas.date}}
-						</div>
+						<div contenteditable id="date">{{canvas.date}}</div>
 					</div>
 					<div class="col w3">
 						Version:
-						<div contenteditable id="version">
-							{{canvas.version}}
-						</div>
+						<div contenteditable id="version">{{canvas.version}}</div>
 					</div>
 				</div>
 			</div>
@@ -45,8 +38,12 @@
 							<div class="cell">
 								<div class="spacer">
 									<h1>Key Partners</h1>
-									<div id="kp" class="content" contenteditable>
-									{{canvas.kp}}
+									<div id="kp" class="content" contenteditable>{{{canvas.kp}}}</div>
+									<div class="help">
+										<p>Who are our Key Partners?</p>
+										<p>Who are our key suppliers?</p>
+										<p>Which Key Resources are we acquairing from partners?</p>
+										<p>Which Key Activities do partners perform?</p>
 									</div>
 								</div>
 							</div>
@@ -56,8 +53,12 @@
 										<div class="cell">
 											<div class="spacer">
 												<h1>Key Activities</h1>
-												<div id="ka" class="content" contenteditable>
-												{{canvas.ka}}
+												<div id="ka" class="content" contenteditable>{{{canvas.ka}}}</div>
+												<div class="help">
+													<p>What Key Activities do our Value Propositions require?</p>
+													<p>Our Distribution Channels?</p>
+													<p>Customer Relationships?</p>
+													<p>Revenue streams?</p>
 												</div>
 											</div>
 										</div>
@@ -66,8 +67,11 @@
 										<div class="cell">
 											<div class="spacer">
 												<h1>Key Resources</h1>
-												<div id="kr" class="content" contenteditable>
-												{{canvas.kr}}
+												<div id="kr" class="content" contenteditable>{{{canvas.kr}}}</div>
+												<div class="help">
+													<p>What Key Resources do our Value Propositions require?</p>
+													<p>Our Distribution Channels? Customer Relationships?</p>
+													<p>Revenue Streams?</p>
 												</div>
 											</div>
 										</div>
@@ -77,8 +81,12 @@
 							<div class="cell">
 								<div class="spacer">
 									<h1>Value Proposition</h1>
-									<div id="vp" class="content" contenteditable>
-									{{canvas.vp}}
+									<div id="vp" class="content" contenteditable>{{{canvas.vp}}}</div>
+									<div class="help">
+										<p>What value do we deliver to the customer?</p>
+										<p>Which one of our customer’s problems are we helping to solve?</p>
+										<p>What bundles of products and services are we offering to each Customer Segment?</p>
+										<p>Which customer needs are we satisfying?</p>
 									</div>
 								</div>
 							</div>
@@ -88,8 +96,12 @@
 										<div class="cell">
 											<div class="spacer">
 												<h1>Customer Relationships</h1>
-												<div id="cr" class="content" contenteditable>
-												{{canvas.cr}}
+												<div id="cr" class="content" contenteditable>{{{canvas.cr}}}</div>
+												<div class="help">
+													<p>What type of relationship does each of our Customer Segments expect us to establish and maintain with them?</p>
+													<p>Which ones have we established?</p>
+													<p>How are they integrated with the rest of our business model?</p>
+													<p>How costly are they?</p>
 												</div>
 											</div>
 										</div>
@@ -98,8 +110,14 @@
 										<div class="cell">
 											<div class="spacer">
 												<h1>Channels</h1>
-												<div id="ch" class="content" contenteditable>
-												{{canvas.ch}}
+												<div id="ch" class="content" contenteditable>{{{canvas.ch}}}</div>
+												<div class="help">
+													<p>Through which Channels do our Customer Segments want to be reached?</p>
+													<p>How are we reaching them now?</p>
+													<p>How are our Channels integrated?</p>
+													<p>Which ones work best?</p>
+													<p>Which ones are most cost-efficient?</p>
+													<p>How are we integrating them with customer routines?</p>
 												</div>
 											</div>
 										</div>
@@ -109,8 +127,10 @@
 							<div class="cell">
 								<div class="spacer">
 									<h1>Customer Segments</h1>
-									<div id="cs" class="content" contenteditable>
-									{{canvas.cs}}
+									<div id="cs" class="content" contenteditable>{{{canvas.cs}}}</div>
+									<div class="help">
+										<p>For whom are we creating value?</p>
+										<p>Who are our most important customers?</p>
 									</div>
 								</div>
 							</div>
@@ -127,16 +147,24 @@
 							<div class="cell">
 								<div class="spacer">
 									<h1>Cost Structure</h1>
-									<div class="content" id="co" contenteditable>
-									{{canvas.co}}
+									<div class="content" id="co" contenteditable>{{{canvas.co}}}</div>
+									<div class="help">
+										<p>What are the most important costs inherent in our business model?</p>
+										<p>Which Key Resources are most expensive?</p>
+										<p>Which Key Activities are most expensive?</p>
 									</div>
 								</div>
 							</div>
 							<div class="cell">
 								<div class="spacer">
 									<h1>Revenue Streams</h1>
-									<div class="content" id="rs" contenteditable>
-									{{canvas.rs}}
+									<div class="content" id="rs" contenteditable>{{{canvas.rs}}}</div>
+									<div class="help">
+										<p>For what value are our customers really willing to pay?</p>
+										<p>For what do they currently pay?</p>
+										<p>How are they currently paying?</p>
+										<p>How would they prefer to pay?</p>
+										<p>How much does each Revenue Stream contribute to overall revenues?</p>
 									</div>
 								</div>
 							</div>
@@ -149,8 +177,15 @@
 
 	<footer>
 		<div class="minigrid">
-			<div class="col w6">Designed by: Business Model Foundry AG | Creative Commons SA-BY 3.0</div>
+			<div class="col w6">Idea: Business Model Foundry AG | CC SA-BY 3.0</div>
 			<div class="col w6">WebApp by Wiremore UG (haftungsbeschränkt)</div>
 		</div>
 	</footer>
 </div>
+
+<button id="canvas-help">Show help</button>
+
+{{else}}
+<h1>Oops, something was wrong</h1>
+<p>The selected Business Model Canvas does not exist.</p>
+{{/if}}
