--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -2,16 +2,17 @@
 
 	<div class="col w6">
 
-		<p>
+		<h1>Create a new Business Model Canvas</h1>
 
-			<label>
-				Create a new Business Model Canvas<br>
-				<input type="text" name="model-name">
-			</label>
+		<form id="create">
 
-			<button id="create-canvas">create</button>
+			<div class="errors"></div>
 
-		</p>
+			<p><label>Choose a name:<br> <input type="text" name="model-name"></label></p>
+
+			<button id="create-canvas" type="submit">let's do business!</button>
+
+		</form>
 
 	</div>
 
