--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -2,11 +2,16 @@
 
 	<div class="col w6">
 
-		<p><label><input type="checkbox" name="autosave"> Autosave canvas on change</label></p>
+		<h1>Settings*</h1>
 
-		<h2>Option</h2>
-		<p><label><input type="radio" value="a" name="test-option"> Option A</label></p>
-		<p><label><input type="radio" value="b" name="test-option"> Option B</label></p>
+		<p><label><input type="checkbox" name="autosave" disabled checked> Autosave canvas on change</label></p>
+
+ 		<h2>Language</h2>
+
+ 		<p><label><input type="radio" value="en" name="language" checked="checked" disabled> English</label></p>
+ 		<p><label><input type="radio" value="de" name="language" disabled> German</label></p>
+
+ 		<small>* Settings coming soon</small>
 
 	</div>
 
