--- a/src/scss/_canvas.scss
+++ b/src/scss/_canvas.scss
@@ -1,15 +1,23 @@
-
 #canvas {
 
-	height: 640px;
-	margin: auto;
-	max-width: 100%;
-	width: 960px;
+	header h1 {
+		margin-bottom: 0;
+	}
 
+	main h1 {
+		font-size: 18px;
+		margin-top: 0;
+		margin-bottom: 12px;
+	}
+
+	footer {
+		font-size: 12px;
+	}
 
 	.info [contenteditable] {
-		display: inline-block;
 		background: #eee;
+		display: inline-block;
+		font-size: 12px;
 		padding: 8px;
 		min-width: 8px;
 		max-height: 2.2em;
@@ -20,103 +28,6 @@
 
 	.info [contenteditable] > * {
 		display: inline;
-	}
-
-	.table {
-		display: table;
-		width: 100%;
-		height: 100%;
-	}
-
-	.table .row {
-		display: table-row;
-	}
-
-	.table .cell {
-		display: table-cell;
-		font-size: 12px;
-	}
-
-	.table .cell .cell:hover {
-
-		background: #eee;
-		transition: background 0.3s linear;
-
-		.cell {
-			background: white;
-		}
-
-		.cell:hover {
-			background: #eee;
-		}
-
-	}
-
-	.table .cell .cell {
-		display: table-cell;
-	}
-
-	.table .cell .cell .cell {
-		border: 0;
-	}
-
-	.table .table {
-		height: 100%;
-		border: 0;
-	}
-
-	.table .spacer {
-		padding: 10px;
-		height: 100%;
-		height: calc(100% + 20px);
-	}
-
-	/* borders */
-	.table {
-		border: 2px solid black;
-	}
-
-	.table .table {
-		border: 0;
-	}
-
-	.table .row.first > .cell {
-		border-bottom: 2px solid black;
-	}
-
-	.table > .row > .cell > .table > .row > .cell {
-		border-right: 2px solid black;
-	}
-
-	.table .table > .row > .cell > .table > .row > .cell {
-		border-right: 0;
-	}
-
-	.table .table > .row > .cell > .table > .row:first-child > .cell {
-		border-bottom: 2px solid black;
-		height: 50%;
-	}
-
-	.table > .row > .cell > .table > .row > .cell:last-child {
-		border-right: 0;
-	}
-
-	/* specific sizes */
-
-	.row.first {
-		height: 70%;
-	}
-
-	.row.second {
-		height: 30%;
-	}
-
-	.row.first .cell {
-		width: 20%;
-	}
-
-	.row.second .cell {
-		width: 50%;
 	}
 
 	.content {
@@ -132,18 +43,239 @@
 		background: rgba(0,0,0,0.05);
 	}
 
+	.help {
+		display: none;
+	}
+
+	.help p {
+		margin-top: 0;
+		margin-bottom: 12px;
+		line-height: 16px;
+	}
+
+	&.show-description {
+
+		.help {
+			display: block;
+		}
+
+		.content {
+			display: none;
+		}
+
+	}
+
 }
 
-@media all and (max-width: 1024px) {
+/* button#canvas-help {
+	// background: url(../img/icons/1410996061_help-file.png) no-repeat center;
+	background-size: 60%;
+	border: 0;
+	outline: 0;
+	font-size: 0;
+	// color: rgba(255,255,255,0);
+	position: fixed;
+	top: 32px;
+	right: 0;
+	width: 64px;
+	height: 64px;
+	background-color: rgb(238, 238, 238);
+	border-radius: 50%;
+	box-shadow: 2px 2px 15px -5px #000;
+}
+ */
+@media all and (min-width: 768px) {
+
+
 	#canvas {
-		padding: 0 16px;
-		height: 688px;
+
+		// height: 640px;
+		// margin: auto;
+		max-width: 100%;
+		// width: 960px;
+
+		main {
+
+			min-height: 610px;
+
+			> .table {
+				min-height: 610px;
+			}
+
+		}
+
+		.table {
+			display: table;
+			width: 100%;
+			height: 100%;
+		}
+
+		.table .row {
+			display: table-row;
+		}
+
+		.table .cell {
+			display: table-cell;
+			font-size: 12px;
+		}
+
+		.table .cell .cell:hover {
+
+			background: #eee;
+			transition: background 0.3s linear;
+
+			.cell {
+				background: white;
+			}
+
+			.cell:hover {
+				background: #eee;
+			}
+
+		}
+
+		.table .cell .cell {
+			display: table-cell;
+		}
+
+		.table .cell .cell .cell {
+			border: 0;
+		}
+
+		.table .table {
+			height: 100%;
+			border: 0;
+		}
+
+		.table .spacer {
+			padding: 10px;
+			height: 100%;
+			height: calc(100% + 20px);
+		}
+
+		/* borders */
+		.table {
+			border: 2px solid black;
+		}
+
+		.table .table {
+			border: 0;
+		}
+
+		.table .row.first > .cell {
+			border-bottom: 2px solid black;
+		}
+
+		.table > .row > .cell > .table > .row > .cell {
+			border-right: 2px solid black;
+		}
+
+		.table .table > .row > .cell > .table > .row > .cell {
+			border-right: 0;
+		}
+
+		.table .table > .row > .cell > .table > .row:first-child > .cell {
+			border-bottom: 2px solid black;
+			height: 50%;
+		}
+
+		.table > .row > .cell > .table > .row > .cell:last-child {
+			border-right: 0;
+		}
+
+		/* specific sizes */
+
+		.row.first {
+			height: 70%;
+		}
+
+		.row.second {
+			height: 30%;
+		}
+
+		.row.first .cell {
+			width: 20%;
+		}
+
+		.row.second .cell {
+			width: 50%;
+		}
+
 	}
+
+
+
 }
 
-@media screen {
+
+@media all and (max-width: 767px) {
+
 	#canvas {
-		transform: scale(1);
-		transform-origin: 568px 0;
+
+		.info {
+			.col {
+				margin: 8px 0;
+			}
+		}
+
+		.cell .cell {
+			border: 2px solid black;
+			margin: 16px 0;
+		}
+
+		.row.first .cell .cell:nth-child(2),
+		.row.first .cell .cell:nth-child(4) {
+			border: 0;
+			margin: 0;
+		}
+
+		.spacer {
+			padding: 8px;
+		}
+
+		.content {
+
+			min-height: 5em;
+
+			&:focus {
+				outline: 0;
+			}
+
+		}
+
 	}
+
+	.canvas-preview {
+		width: 100%;
+	}
+
+
+}
+
+.canvas-preview {
+
+	border: 2px solid #000;
+	padding: 8px;
+	display: inline-block;
+	margin: 0 8px 8px 0;
+
+	h1, h2 {
+		margin: 0;
+		font-weight: bold;
+	}
+
+	ul {
+		padding: 0;
+	}
+
+	a {
+		color: inherit;
+		text-decoration: none;
+	}
+
+	.delete {
+		float: right;
+		color: $danger;
+	}
+
 }
