--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -3,21 +3,55 @@
 #menu {
 
 	background: black;
+	background-size: 75% auto;
+	background-position: left 50% bottom 15px;
+	background-image: url(../img/bgs/logo_w.png);
+	background-repeat: no-repeat;
 	height: 100%;
 	left: 0;
 	position: fixed;
 	top: 0;
-	transition: all 0.3s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	overflow: auto;
 	padding-top: 64px;
+	padding-bottom: 96px;
 	width: 50px;
+	z-index: 4096;
+
+	ul {
+		padding: 0;
+		margin: 0 16px;
+		overflow: hidden;
+	}
+
+	li {
+		box-shadow: 0 -1px 0 #333 inset, 0 1px 0 #666 outset;
+		// border-bottom: #6b6b6b 1px solid;
+		list-style: none;
+	}
+
+	li a {
+		background: #ccc;
+		box-shadow: inset 0px 1px 0 #fff, inset 0 -1px 0 #333;
+		color: #333;
+		display: block;
+		font-size: 125%;
+		margin-bottom: 4px;
+		padding: 16px;
+		text-decoration: none;
+		text-shadow: 0px 1px 0 #eee;
+	}
 
 	&.is-visible {
 
+		background-image: url(../img/bgs/wiremore_logo_wb.png);
 		width: 280px;
 
 		.content {
-			width: 280px;
+			height: auto;
 			opacity: 1;
+			width: 100%;
+			max-width: 100%;
 		}
 
 		.hamburger {
@@ -93,16 +127,12 @@
 	.content {
 
 		color: white;
+		height: 1px;
 		opacity: 0;
 		transition: all 0.3s ease-in-out;
 		width: 50px;
+		overflow: hidden;
 
 	}
 
-}
-
-@media print {
-	#menu {
-		display: none;
-	}
 }
